# docs/swagger.yaml
@@ -147,4 +147,27 @@ paths:
       summary: Reset Password
       tags:
       - Auth
+  /api/news/:
+    get:
+      consumes:
+      - application/json
+      description: Retrieve all news articles
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/pkg.Response'
+      security:
+      - BearerAuth: []
+      summary: Get All News
+      tags:
+      - News
+securityDefinitions:
+  BearerAuth:
+    description: Type "Bearer" followed by a space and JWT token.
+    in: header
+    name: Authorization
+    type: apiKey
 swagger: "2.0"
